--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "loreto",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -15,5 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+
+  "homepage": "./"
 }
